Fix so that sidebar menu title not overflowing the plus sign for "has children"

--- a/source/sass/component/navigation/_nav.scss
+++ b/source/sass/component/navigation/_nav.scss
@@ -69,6 +69,10 @@
     .has-children,
     .page_item_has_children,
     .menu-item-has-children {
+        a {
+            padding-right: 33px;
+        }
+
         > a::after {
             position: absolute;
             right: 10px;
